# Surucursed_opencv

./: CMakeLists.txt  LICENSE  README.md  compile.sh  constants.h  facedetect_extra.cpp  game  game.cpp  game.cpp.bak  game.h  main.cpp  surucursed
